fix: Add missing ignorePath configuration to Prettier settings
Signed-off-by: Johnathan Falk <johnathan.falk@gmail.com>

--- a/.prettierrc
+++ b/.prettierrc
@@ -48,5 +48,6 @@
       "files": "*.graphql",
       "options": { "tabWidth": 2, "printWidth": 80 }
     }
-  ]
+  ],
+  "ignorePath": ".prettierignore"
 }
