--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,19 +1,61 @@
+# file: .github/dependabot.yml
+# version: 1.0.0
+# guid: 4a974065-b9e8-450f-a128-3571b58b8a10
+
 # Smart Dependabot configuration for public-scratch
-# Automatically detected: github-actions
+# Supports: github-actions, python
 
 version: 2
 updates:
-  - package-ecosystem: github-actions
-    directory: /
-    schedule:
-      interval: weekly
-      day: friday
-      time: 09:00
-      timezone: America/New_York
-    open-pull-requests-limit: 5
-    commit-message:
-      prefix: ci
-      include: scope
-    labels:
-      - dependencies
-      - priority-high
+- package-ecosystem: github-actions
+  directory: /
+  schedule:
+    interval: weekly
+    day: wednesday
+    time: '10:00'
+    timezone: America/New_York
+  open-pull-requests-limit: 5
+  commit-message:
+    prefix: ci
+    include: scope
+  labels:
+  - dependencies
+  - github-actions
+  - ci-cd
+  groups:
+    ci-dependencies:
+      patterns:
+      - actions/*
+      - github/*
+      update-types:
+      - minor
+      - patch
+    external-actions:
+      patterns:
+      - '*'
+      exclude-patterns:
+      - actions/*
+      - github/*
+      update-types:
+      - minor
+      - patch
+- package-ecosystem: pip
+  directory: /
+  schedule:
+    interval: weekly
+    day: tuesday
+    time: '11:00'
+    timezone: America/New_York
+  open-pull-requests-limit: 3
+  commit-message:
+    prefix: python
+    include: scope
+  labels:
+  - dependencies
+  - tech:python
+  allow:
+  - dependency-type: direct
+  ignore:
+  - dependency-name: '*'
+    update-types:
+    - version-update:semver-major
